authorization api adjustments
