# openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: FIT-Timetable API
-  version: 0.0.6
+  version: 0.0.7
 paths:
   /schedule/group/{group}:
     get:
@@ -117,12 +117,6 @@ paths:
       tags:
         - schedule
       summary: Получить закрепленное за студентом расписание
-      parameters:
-        - name: student_id
-          in: query
-          required: false
-          schema:
-            type: integer
       responses:
         '200':
           description: Расписание
@@ -141,9 +135,6 @@ paths:
             schema:
               type: object
               properties:
-                studentId:
-                  type: integer
-                  example: 1
                 group:
                   type: string
                   example: '20201'
@@ -154,14 +145,7 @@ paths:
     post:
       summary: Cбросить все изменения и загрузить расписание с официального сайта 
       tags:
-        - schedule 
-      parameters:
-        - name: student_id
-          in: query
-          required: true
-          schema:
-            type: integer
-            example: 1
+        - schedule
       responses:
         '200':
           description: Расписание 
@@ -975,9 +959,6 @@ components:
     LessonForm:
       type: object
       properties:
-        studentId:
-          type: integer
-          example: 1
         subjectId:
           type: integer
           example: 1
