# src/main/java/ru/nsu/fit/lesson/api/LessonForm.java
@@ -5,7 +5,6 @@ import ru.nsu.fit.lesson.impl.domain.model.LessonPlace;
 import ru.nsu.fit.lesson.impl.domain.model.LessonType;
 
 public record LessonForm(
-    Long studentId,
     Long subjectId,
     LessonType type,
     LessonDate date,
